# nanocode

./: .gitignore  AGENT.md  README.md  nanocode.py  pyproject.toml
src/nanocode/: main.py  skills.py
