[project]
name = "nanocode"
version = "0.1.0"
description = "Minimal CLI coding assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "markdownify>=0.11.0",
]
dev-dependencies = [
    "ruff>=0.1.0",
]

[project.scripts]
nanocode = "nanocode.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []
